Ajustando rota da thumbnail
