# app/src/config/swagger.yaml
@@ -162,7 +162,7 @@ paths:
         204:
           description: Post deletado com sucesso
 
-  /posts/{id}/thumbnail:
+  /posts/{id}/thumbnail/{id_thumbnail}:
     get:
       tags:
         - Posts
@@ -174,6 +174,12 @@ paths:
           schema:
             type: string
           description: ID do post
+        - in: path
+          name: id_thumbnail
+          required: true
+          schema:
+            type: string
+          description: ID da thumbnail
       responses:
         200:
           description: Imagem retornada com sucesso
